--- a/templates/atomic/organisms/breadcrumb.html
+++ b/templates/atomic/organisms/breadcrumb.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 {% if breadcrumbs %}
-<div class="w-max text-left">
+<div class="w-max text-left max-w-[340px] block">
     <nav aria-label="breadcrumb" class="mb-4">
       <ol class="flex w-full flex-wrap items-center rounded-md bg-blue-gray-50 bg-opacity-60 py-2 text-blue-gray-900 dark:text-white sm:px-6 lg:px-8">
         {% for breadcrumb in breadcrumbs %}
