feat: create stadium detail page

--- a/stadiums/templates/stadiums/stadium_list.html
+++ b/stadiums/templates/stadiums/stadium_list.html
@@ -69,7 +69,7 @@
               </td>
               <td class="table_td sticky dark:bg-zinc-900 left-0 z-10 pl-3">
                 <!-- Country name -->
-                <a href="#">
+                <a href="{% url "stadium_detail" pk=stadium.pk %}">
                   <span class="hover:underline">{{ stadium.name }}</span>
                 </a>
               </td>  
