--- a/leagues/templates/leagues/league_list.html
+++ b/leagues/templates/leagues/league_list.html
@@ -11,7 +11,7 @@
 <!-- Main content section -->
 <div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/league.html' %}
-  <h2 class="background-color rounded-md">
+  <h2 class="h2_title">
     LIGAS
   </h2>
 </div>
