--- a/players/templates/players/player_detail.html
+++ b/players/templates/players/player_detail.html
@@ -14,7 +14,7 @@
 <div class="flex justify-center">
   <div class="card">
   <img width="80" src="{{ player.img }}" class="m-auto block player_main_img" />
-  <h2 class="text-center dark:text-white text-base font-medium">{{ player.name | upper }}</h2>
+  <h2 class="h2_title">{{ player.name | upper }}</h2>
   </div>
 </div>
 
