--- a/stadiums/templates/stadiums/stadium_list.html
+++ b/stadiums/templates/stadiums/stadium_list.html
@@ -10,7 +10,7 @@
 
 <div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/stadium.html' %}
-  <h2 class="background-color rounded-md">
+  <h2 class="h2_title">
     Estádios
   </h2>
 </div>
