--- a/templates/atomic/organisms/datalist.html
+++ b/templates/atomic/organisms/datalist.html
@@ -43,7 +43,7 @@
 
     </ul>
 
-    <ul class="countries_datalist_ul datalist_ul">
+    <ul class="country_datalist_ul datalist_ul">
 
     </ul>
   </div>
