--- a/templates/atomic/organisms/datalist_desktop.html
+++ b/templates/atomic/organisms/datalist_desktop.html
@@ -40,10 +40,13 @@
     <ul class="players_datalist_ul datalist_ul">
     </ul>
 
-    <ul class="countries_datalist_ul datalist_ul">
+    <ul class="country_datalist_ul datalist_ul">
     </ul>
     
     <ul class="trophies_datalist_ul datalist_ul">
+    </ul>
+    
+    <ul class="stadiums_datalist_ul datalist_ul">
     </ul>
   </div>
 </label>
