--- a/players/templates/players/player_list.html
+++ b/players/templates/players/player_list.html
@@ -8,9 +8,9 @@
 {% block list_content %}
 {% load custom_filters %}
 
-<div class="block sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
+<div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/player.html' %}
-  <h2 class="background-color rounded-md">
+  <h2 class="h2_title">
     Jogadores
   </h2>
 </div>
