--- a/search_items/templates/search_items/search_items_list.html
+++ b/search_items/templates/search_items/search_items_list.html
@@ -9,7 +9,7 @@
 
 <!-- Main content section -->
 <div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
-  <h2 class="background-color rounded-md">
+  <h2 class="background-color rounded-md h2_title">
     RESULTADOS PARA "{{ query }}"
   </h2>
 </div>
@@ -20,7 +20,11 @@
       <ul>
       {% for item in page_obj %}
           <li class="text-[#A1A1AA] flex items-center justify-start p-2 border-b-[#a1a1aa30] border-b-[1px] last-of-type:border-b-0 last-of-type:pb-0 first-of-type:pt-0">
-            <img src="{% if table == "countries" %}{{item.flag}}{% else %}{{item.img}}{% endif %}" class="{% if table == "players" %} rounded-full w-[52px] h-[52px] {% endif %} object-cover block max-w-[50px]" />
+            {% if table == "stadiums" %}
+              <img src = "{{ item.imgs | get_stadium_img }}" width="190" height="127" class="min-w-[40px]" />
+            {% else %}
+              <img src="{% if table == "countries" %}{{item.flag}}{% else %}{{item.img}}{% endif %}" class="{% if table == "players" %} rounded-full w-[52px] h-[52px] {% endif %} object-cover block max-w-[50px]" />
+            {% endif %}
             <a href="/{{table}}/{{item.pk}}" class="ml-1 text-left hover:underline">
               {{ item.name }}
             </a>
