--- a/templates/atomic/organisms/datalist_mobile.html
+++ b/templates/atomic/organisms/datalist_mobile.html
@@ -23,7 +23,7 @@
     />
   </div>
   {% include 'atomic/organisms/datalist_skeleton.html' %}
-  <div class="absolute  translate-y-[100%] w-full max-h-100vh lg:w-[280px] left-0 bottom-0 search_recomendation lg:max-h-[400px] overflow-auto bg-white lg:rounded-md  border-[1px] border-[#111111]">
+  <div style="max-height: calc(100vh - 75px);" class="absolute  translate-y-[100%] w-full max-h-[calc( 100vh - 35px )] lg:w-[280px] left-0 bottom-0 search_recomendation lg:max-h-[400px] overflow-auto bg-white lg:rounded-md  border-[1px] border-[#111111]">
 
     <ul class="leagues_datalist_ul datalist_ul">
     </ul>
@@ -34,10 +34,13 @@
     <ul class="players_datalist_ul datalist_ul">
     </ul>
 
-    <ul class="countries_datalist_ul datalist_ul">
+    <ul class="country_datalist_ul datalist_ul">
     </ul>
 
     <ul class="trophies_datalist_ul datalist_ul">
+    </ul>
+
+    <ul class="stadiums_datalist_ul datalist_ul">
     </ul>
 
   </div>
