--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -392,7 +392,7 @@
                 </td>
                 <td class="table_td">
                   <a href="{% url "team_detail" pk=player.id_team_id %}" class="hover:underline flex items-center gap-1">
-                    <img src="{{ player.id_team.small_img }}" width="20" title="{{ player.id_team.name }}" class="inline-block"/>
+                    <img src="{{ player.id_team.img }}" width="20" title="{{ player.id_team.name }}" class="inline-block"/>
                     {{ player.id_team.name }}
                   </a>
                 </td>
